# ebt

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.ui  EBT_Eligibility_Checker.pptx  EBT_Eligibility_Classification_PRD.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-minimal.txt  requirements-streamlit.txt  requirements.txt
.streamlit/: config.toml
data/regulations/: cfr_7_271_2.txt  fns_eligible_foods.txt  fns_ineligible_items.txt
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: build_vector_store.py  setup_database.py
src/: __init__.py  main.py
src/agents/: __init__.py  classification_agent.py
src/api/: dependencies.py
src/core/: __init__.py  config.py  constants.py  exceptions.py
src/data/: __init__.py  database.py
src/models/: __init__.py  audit.py  classification.py  product.py  regulation.py
src/rag/: document_loader.py  embeddings.py  retriever.py  vector_store.py
src/services/: ai_reasoning_agent.py  challenge_handler.py  classification_engine.py  confidence_scorer.py  pricing.py  rule_validator.py
src/utils/: hashing.py  logging.py  validators.py
tests/: __init__.py  conftest.py
tests/fixtures/: expected_results.json  products.json
tests/integration/: test_agent_reasoning.py  test_api_endpoints.py  test_rag_retrieval.py
tests/unit/: test_classification_engine.py  test_confidence_scorer.py  test_rule_validator.py
ui/: app.py
ui/components/: product_form.py  reasoning_chain.py  result_display.py
ui/pages/: audit_viewer.py  bulk_upload.py  challenge.py  classify.py
(+15 files in other folders)
