[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebt-classification"
version = "1.1.0"
description = "AI-powered EBT/SNAP eligibility classification system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Loki Agents", email = "lokeshmure@live.com"}
]
keywords = ["ebt", "snap", "classification", "ai", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/asklokesh/ebt-classification"
Documentation = "https://github.com/asklokesh/ebt-classification#readme"
Repository = "https://github.com/asklokesh/ebt-classification"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "build", "dist", "data"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests", "data"]
